--- a/_posts/2025-12-22-teste.md
+++ b/_posts/2025-12-22-teste.md
@@ -1,13 +1,22 @@
 ---
 layout: post
 title:  "Welcome to Jekyll!"
+header_image: "./dantas.io-logo.png"
 ---
 
 # Welcome
 
-**Hello world**, this is my first Jekyll blog post.
+![Image](dantas.io-logo.png)
 
+<!-- Use HTML to set specific dimensions -->
+<img src="{{ page.header_image }}" alt="dantas.io logo" width="217" height="76"/>
+
+**Hello world**, this is my first Jekyll blog post.
 
 I hope you like it!
 
-Teste !!!
+
+
+
+
+
